--- a/sass/components/_index.scss
+++ b/sass/components/_index.scss
@@ -1,1 +1,121 @@
 @import "../utils/vars";
+.page-header{
+    max-width: 480px;
+}
+.container{
+max-width: 100%;
+margin:0, auto;
+}
+.container-flex{
+    display:flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+}
+.hero-title{
+    font:Heebo;
+font-weight: 700;
+font-size: 32px;
+line-height: 1.25;
+color:$paragraph-color;
+text-align: center;}
+.hero-title-section{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.subtitle{
+    font:Heebo;
+font-weight: 400;
+font-size: 18px;
+line-height: 3.33;
+color:$paragraph-color;
+}
+.section-title{
+    font:Heebo;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 3.33;
+    color:$paragraph-color;
+}
+.post-title{
+    font:Heebo;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.47;
+    color:$paragraph-color;  
+}
+.menu-toggle {
+    height: 30px;
+    width: 29px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: $paragraph-color;
+    padding: 0px;
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+    border-radius: 50%;
+    outline: none;
+  }
+  .menu-toggle:hover,
+  .menu-toggle:focus {
+    color: $button-bgcolor;
+    cursor: pointer;
+  }
+  
+  .menu-container {
+    display:flex;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    padding: 32px;
+    background-color: $white-color;
+    z-index: 999;
+    transform: translateX(100%);
+    transition: transform 250ms ease-in-out;
+  }
+  .menu-container.is-open {
+    transform: translateX(0);
+  }
+
+  .mobile-menu {
+    list-style: none;
+  }
+  .mobile-menu-link{
+    color:$paragraph-color;
+font-weight: 500;
+font-size: 20px;
+line-height: 1.5;
+text-decoration: none;
+  }
+  @media screen and (min-width: 767px) {
+    .menu-toggle {
+      display: none;
+    }
+  }
+  .section-button{
+    color:$white-color;
+    background-color: $button-bgcolor;
+    height: 47px;
+    width: 207px;
+    border-style: none;
+    margin-top: 36px;
+    margin-bottom: 59px;
+  }
+  .page-header-grid{
+    display:none;
+    list-style-type: none;
+  justify-content: flex-end;
+    gap:33px;
+  }
+  .page-header-link{
+    color:$black-color;
+    font-size: 20px;
+    text-decoration: none;
+    font-weight: 500px;
+  }
