--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -5,3 +5,4 @@ $writing-color:rgba(134, 149, 164, 1);
 $white-color: #ffffff;
 $button-bgcolor: rgba(255, 100, 100, 1);
 $icon-color: #afb1b8;
+$black-color:rgba(0,0,0,1);
