--- a/sass/components/_index.scss
+++ b/sass/components/_index.scss
@@ -1,46 +1,51 @@
 @import "../utils/vars";
 .page-header{
-    max-width: 480px;
+    max-width:480px;
+}
+.heading-section{
+  max-width:480px;
 }
 .container{
-max-width: 100%;
-margin:0, auto;
+width: 100%;
+margin: 0, auto;
 }
 .container-flex{
-    display:flex;
-    flex-direction: column-reverse;
-    justify-content: center;
-    align-items: center;
+  margin:0, auto;
+  width: 100%;
+   display:flex;
+  flex-direction: column-reverse;
+   justify-content: center;
+   align-items: center;
+   text-align: center;
 }
 .hero-title{
-    font:Heebo;
+font-family:Heebo;
 font-weight: 700;
 font-size: 32px;
 line-height: 1.25;
 color:$paragraph-color;
-text-align: center;}
-.hero-title-section{
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+text-align: center;
+padding:0,32px;}
+.picture{
+  width:170px;
+  height:170px;
 }
 .subtitle{
-    font:Heebo;
+ font-family:Heebo;
 font-weight: 400;
 font-size: 18px;
 line-height: 3.33;
 color:$paragraph-color;
 }
 .section-title{
-    font:Heebo;
+    font-family:Heebo;
     font-weight: 500;
     font-size: 30px;
     line-height: 3.33;
     color:$paragraph-color;
 }
 .post-title{
-    font:Heebo;
+    font-family:Heebo;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.47;
@@ -53,7 +58,8 @@ color:$paragraph-color;
     justify-content: center;
     align-items: center;
     color: $paragraph-color;
-    padding: 0px;
+    margin-left: auto;
+    padding: 0;
     background-color: transparent;
     cursor: pointer;
     border: none;
@@ -71,8 +77,8 @@ color:$paragraph-color;
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     padding: 32px;
     background-color: $white-color;
     z-index: 999;
@@ -84,7 +90,7 @@ color:$paragraph-color;
   }
 
   .mobile-menu {
-    list-style: none;
+    list-style-type: none;
   }
   .mobile-menu-link{
     color:$paragraph-color;
@@ -119,3 +125,44 @@ text-decoration: none;
     text-decoration: none;
     font-weight: 500px;
   }
+  .works{
+    max-width: 480px;
+    text-align: center;
+   
+  }
+  .recent-posts{
+    width: 480px;
+    text-align: center;
+    background-color: $bg-color;
+    padding-bottom:38px;
+  }
+  .post-section{
+    margin-bottom: 17px;
+    background-color: $white-color;
+    text-align: left;
+  }
+  .works-title{
+    font-size: 24px;
+    font-weight: 700px;
+    line-height:1.25;
+  }
+  .works-grid{
+    list-style-type: none;
+  }
+  .works-grid-item img{
+    width:339px;
+    height:230px;
+  }
+ .date-section{
+  display:flex;
+  gap:34px;
+margin-left:20px;
+ }
+ .date-paragraph{
+  font-size:16px;
+  line-height: 1.46;
+ }
+ .writiing-paragraph{
+  font-size: 16px;
+  line-height:1.46 ;
+ }
