--- a/sass/components/_index.scss
+++ b/sass/components/_index.scss
@@ -50,6 +50,7 @@ color:$paragraph-color;
     font-size: 26px;
     line-height: 1.47;
     color:$paragraph-color;  
+    padding-top: 12px;
 }
 .menu-toggle {
     height: 30px;
@@ -58,7 +59,8 @@ color:$paragraph-color;
     justify-content: center;
     align-items: center;
     color: $paragraph-color;
-    margin-left: auto;
+    
+    margin-top: 20px;
     padding: 0;
     background-color: transparent;
     cursor: pointer;
@@ -73,13 +75,11 @@ color:$paragraph-color;
   }
   
   .menu-container {
-    display:flex;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    padding: 32px;
     background-color: $white-color;
     z-index: 999;
     transform: translateX(100%);
@@ -98,6 +98,7 @@ font-weight: 500;
 font-size: 20px;
 line-height: 1.5;
 text-decoration: none;
+margin-bottom: 40px;
   }
   @media screen and (min-width: 767px) {
     .menu-toggle {
@@ -141,10 +142,12 @@ text-decoration: none;
     background-color: $white-color;
     text-align: left;
   }
+
   .works-title{
     font-size: 24px;
     font-weight: 700px;
     line-height:1.25;
+    text-align: left;
   }
   .works-grid{
     list-style-type: none;
@@ -162,7 +165,8 @@ margin-left:20px;
   font-size:16px;
   line-height: 1.46;
  }
- .writiing-paragraph{
+ .writing-paragraph{
   font-size: 16px;
   line-height:1.46 ;
+  padding-bottom: 22px;
  }
