--- a/sass/components/_index.scss
+++ b/sass/components/_index.scss
@@ -26,6 +26,7 @@ line-height: 1.25;
 color:$paragraph-color;
 text-align: center;
 padding:0,32px;}
+
 .picture{
   width:170px;
   height:170px;
@@ -135,7 +136,7 @@ margin-bottom: 40px;
     width: 480px;
     text-align: center;
     background-color: $bg-color;
-    padding-bottom:38px;
+   padding-bottom: 38px;
   }
   .post-section{
     margin-bottom: 17px;
@@ -155,6 +156,7 @@ margin-bottom: 40px;
   .works-grid-item img{
     width:339px;
     height:230px;
+   text-align: left;
   }
  .date-section{
   display:flex;
